# flam-player

./: .gitignore  .gitmodules  AGENT.md  CMakeLists.txt  README.md  do_build.bat  flam-device-inventory.md  manual_build.bat  run.bat  security-audit-report.md  test_run.bat  title-card-final.lua
games/casse-briques/: README.md  build.py  main.lua
games/casse-briques/script/: breakout_1_0_0.lua
libs/: lv_conf.h
src/: main.c
src/bindings/: lua_lv.c  lua_lv.h  lua_lv_event.c  lua_lv_obj.c  lua_lv_style.c
src/firmware/: fw_globals.c  fw_globals.h
src/fonts/: nunito_bold_12.c  nunito_bold_16.c  nunito_bold_20.c  nunito_extrabold_12.c  nunito_extrabold_14.c  nunito_extrabold_16.c  nunito_extrabold_20.c
src/formats/: lif_decoder.c  lif_decoder.h  mp3map_parser.c  mp3map_parser.h  pk_reader.c  pk_reader.h
src/platform/: sdl_audio.c  sdl_audio.h  sdl_driver.c  sdl_driver.h
stories/: histoire-malveillante.plain - Copie (2).pk  histoire-malveillante.plain - Copie (3).pk  histoire-malveillante.plain - Copie.pk  histoire-malveillante.plain.pk
stories/histoire-malveillante.plain/: info.plain  main.lua
stories/histoire-malveillante.plain/img/: thumbnail.lif
stories/histoire-malveillante.plain/script/: button-theme-default.lua  button-theme-interactive.lua  button-theme.lua  button.lua  global.lua  magnons-inventory.lua  progressionManager.lua  title-card.lua  v-scroll.lua
tests/: test_audio_stub.c  test_audio_stub.h  test_headless_driver.c  test_headless_driver.h  test_main.c
tests/lua/: fuzz_lvgl.lua  poc_memory_leak.lua  poc_residual_read.lua  poc_story_test.lua  poc_struct_dump.lua  poc_use_after_free.lua  poc_write_corruption.lua  test_anim.lua  test_arc.lua  test_area.lua  test_audio_bindings.lua  test_btn.lua  test_color.lua  test_constants.lua  test_event.lua  test_firmware.lua  test_group.lua  test_helpers.lua  test_img.lua  test_integration.lua  test_label.lua  test_obj.lua  test_slider.lua  test_style.lua  test_timer.lua
tools/telmi2flam/: DEVICE_VS_SIM.md  README.md  TELMI_FORMAT.md  lif.py  mp3map.py  telmi2flam.py  validate.py
tools/telmi2flam/engine/: main.lua  story.lua
tools/telmi2flam/runtime/img/script/: arrow-left-18x18-ui-000.lif  arrow-left-18x18-ui-1000.lif  arrow-right-18x18-ui-000.lif  arrow-right-18x18-ui-1000.lif  arrow-right-ui-000.lif  audio-player-pause.lif  audio-player-play.lif  bubble.lif  check.lif  checkDisabled.lif  corner.lif  cornerDisabled.lif  cross.lif  empty.lif  flam_icon.lif  lock.lif  mask-154x213.lif  mask.lif  pause-18x18-brand-primary-900.lif  picto_empty.lif  play-18x18-ui-000.lif  play-18x18-ui-1000.lif  player_icon.lif  uncheck.lif  uncheckDisabled.lif
tools/telmi2flam/runtime/script/: audio-player_1_0_0.lua  button-theme-default.lua  button-theme-interactive.lua  button-theme.lua  button.lua  carousel_1_0_0.lua  chapterView.lua  collection.lua  composer.lua  detail.lua  dialog-interactive.lua  dialog.lua  dialog_1_0_0.lua  dice-roll.lua  full-screen-image.lua  global.lua  h-container.lua  horizontal-notification.lua  image-Button.lua  image-choice_1_0_0.lua  image-panoramic.lua  image-stress.lua  list-choice-circular.lua  list-choice_1_0_0.lua  list-quiz.lua  minimal.lua  modal-info_0_9_0.lua  notification.lua  progressionManager.lua  thread.lua  title-card.lua  title-screen.lua  v-container.lua  v-scroll.lua
